# moonlitwalk

./: .gitattributes  meson.build  meson_options.txt
cross/: android-aarch64.ini  android-armv7a.ini  wasm.ini
docs/: Doxyfile.in  meson.build
include/moonlitwalk/: amw.h  defines.h  events.h  hadal.h  hadopelagic.h  math.h  moony.h  os.h  sewing.h  simd.h  system.h  vk.h
include/moonlitwalk/math/: aabb.h  affine.h  bezier.h  camera.h  euler.h  fft.h  frustum.h  ivec2.h  ivec3.h  ivec4.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  ortho.h  persp.h  plane.h  project.h  quat.h  ray.h  sphere.h  vec2.h  vec3.h  vec4.h  view.h
include/moonlitwalk/simd/: arm.h  avx.h  neon.h  sse2.h  wasm.h  x86.h
shaders/: base.frag  base.vert  meson.build
src/: a_moonlit_walk.c  amw.h  arena.c  hadal.c  hadopelagic.h  internal.h  lake.c  lake.h  log.c  main.c  meson.build  sew_context.h  sewing.c  spinlock.c  system.h  timer.c
src/asm/: jump_arm64_aapcs_elf_gas.S  jump_arm64_aapcs_macho_gas.S  jump_arm64_aapcs_pe_armasm.asm  jump_arm_aapcs_elf_gas.S  jump_arm_aapcs_macho_gas.S  jump_arm_aapcs_pe_armasm.asm  jump_i386_ms_pe_gas.asm  jump_i386_ms_pe_masm.asm  jump_i386_sysv_elf_gas.S  jump_i386_sysv_macho_gas.S  jump_x86_64_ms_pe_gas.asm  jump_x86_64_ms_pe_masm.asm  jump_x86_64_sysv_elf_gas.S  jump_x86_64_sysv_macho_gas.S  make_arm64_aapcs_elf_gas.S  make_arm64_aapcs_macho_gas.S  make_arm64_aapcs_pe_armasm.asm  make_arm_aapcs_elf_gas.S  make_arm_aapcs_macho_gas.S  make_arm_aapcs_pe_armasm.asm  make_i386_ms_pe_gas.asm  make_i386_ms_pe_masm.asm  make_i386_sysv_elf_gas.S  make_i386_sysv_macho_gas.S  make_x86_64_ms_pe_gas.asm  make_x86_64_ms_pe_masm.asm  make_x86_64_sysv_elf_gas.S  make_x86_64_sysv_macho_gas.S  meson.build
src/audio/: meson.build
src/common/: log.c
src/core/: arena.c  hadal.c  hadal.h  log.c  sew_context.h  sewing.c  spinlock.c
src/linux/: linux_joystick.c  linux_joystick.h  linux_system.c  wayland.h  wl.h  wl_display.c  wl_output.c  wl_surface.c  wl_window.c
src/renderer/: meson.build  renderer.h  vk.h  vk_common.c  vk_driver.c  vk_library.c  vk_main.c  vk_shaders.c  vk_validation.c  vulkan.h
src/renderer/vulkan/: vk.h  vk_common.c  vk_driver.c  vk_shaders.h  vk_surface.c  vk_validation.c
src/unix/: dll.c  posix_mutex.c  posix_poll.c  posix_sem.c  posix_threads.c  posix_time.c
