# build targets
option('docs',     type : 'boolean', value : 'true', description : 'Generate Doxygen documentation')

# linux display backends
option('wayland',  type : 'feature', value : 'auto', description : 'Wayland linux display backend')
option('xcb',      type : 'feature', value : 'auto', description : 'X11 (XCB) linux display backend') 
option('kms',      type : 'feature', value : 'auto', description : 'DRM/KMS linux display backend')

# rendering backends
option('vulkan',   type : 'feature', value : 'auto', description : 'Vulkan rendering backend')
option('webgpu',   type : 'feature', value : 'auto', description : 'WebGPU rendering backend')

# audio backends
option('core',     type : 'feature', value : 'auto', description : 'CoreAudio apple audio backend')
option('asio',     type : 'feature', value : 'auto', description : 'Steinberg ASIO windows audio backend')
option('wasapi',   type : 'feature', value : 'auto', description : 'WASAPI windows audio backend')
option('xaudio2',  type : 'feature', value : 'auto', description : 'XAudio2 windows audio backend')
option('dsound',   type : 'feature', value : 'auto', description : 'DirectSound windows audio backend')
option('aaudio',   type : 'feature', value : 'auto', description : 'AAudio android audio backend')
option('opensles', type : 'feature', value : 'auto', description : 'OpenSL|ES audio backend')
option('webaudio', type : 'feature')
option('alsa',     type : 'feature', value : 'auto', description : 'ALSA linux audio backend')
option('jack',     type : 'feature', value : 'auto', description : 'JACK unix audio backend')
option('pipewire', type : 'feature', value : 'auto', description : 'PipeWire linux audio backend')
option('pulse',    type : 'feature', value : 'auto', description : 'PulseAudio linux audio backend')
option('oss',      type : 'feature', value : 'auto', description : 'OSS bsd audio backend')
